fix(content/entry): fix entry actions button width on Firefox

--- a/src/applications/content-entries-app/entry/entry.component.scss
+++ b/src/applications/content-entries-app/entry/entry.component.scss
@@ -17,6 +17,7 @@
         font-size: 24px;
         margin-left: auto;
         margin-right: 24px;
+        width: 48px;
     }
 }
 
